temporal-verifier/tests/examples/fail/sorts/quantifier_repeated_args.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

sort s

# quantified variables names cannot be repeated in a single quantifier
assume forall x:s, x:s. x = x
